--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     web:
         build: .
         container_name: "ferum"
-        command: python /code/manage.py runserver 0.0.0.0:8000
+        command: python /book/manage.py runserver 0.0.0.0:8000
         # command: gunicorn config.wsgi -b 0.0.0.0:8000 # new
         volumes:
         - .:/code
